--- a/app/src/main/res/layout/layout_mapcheck.xml
+++ b/app/src/main/res/layout/layout_mapcheck.xml
@@ -14,6 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:textSize="@dimen/txtsize_24sp"
         android:singleLine="true"
         android:gravity="center"
         android:textColor="@color/blackgroundmain" />
